# laser-precision-adjust

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs  config.json.example  jsconfig.json
.gitea/workflows/: ci.yaml  push_request.yaml
find_short/: simple_gen.py
find_shot/: .gitignore  analise_adj.ipynb  analise_all_data.ipynb  analise_by_serie.ipynb  denoize.py  find_system.ipynb  fragment_iterator.py  halpers.py  libSmoothSpline.py  load_serie.py  requirements.txt  shot_detector.py  test_exp.ipynb  train.py
find_shot/data/: analise.ipynb  log2csv.sed  separate_seriaes.py  show_flattern.py
find_shot_v1/: .gitignore  analise_adj.ipynb  find_system.ipynb  test_exp.ipynb
find_shot_v1/data/: flatterise.py  separate_seriaes.py
find_shot_v2/: .gitignore  analise_all_data.ipynb  analise_file.ipynb  halpers.py
find_shot_v2/data/: freq_26-09-2023_10h-11m.log-fragments.json  freq_27-09-2023_14h-07m.log-fragments.json  freq_28-09-2023_10h-15m.log-fragments.json  freq_28-09-2023_14h-36m.log-fragments.json  freq_28-09-2023_15h-07m.log-fragments.json
src/: box_plot.rs  config.rs  coordinates.rs  gcode_codec.rs  gcode_ctrl.rs  laser_controller.rs  laser_setup_controller.rs  lib.rs  limit_float_precission.rs  line_codec.rs  measure_sanitizer.rs  precision_adjust.rs  precision_adjust.rs_  precision_adjust2.rs  predict.rs
typescript-converter-macro/: Cargo.toml
typescript-converter-macro/src/: lib.rs
www/: .gitignore
