[package]
name = "laser-precision-adjust"
version = "0.1.3"
edition = "2021"
authors = ["ololoshka2871"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4"
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }

bytes = { version = "1", default-features = false }
futures = "0.3"
clap = { version = "4.2", features = ["derive"] }
rand = "0.8"

log = "0.4"
env_logger = "0.10"

serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"

directories = "5"

rustyline-async = { version = "=0.3.0", default-features = false } # В версии 0.3.1 двоение букв

colored = "2.0"
shellwords = "1.1"

###

laser-setup-interface = { git = "https://github.com/ololoshka2871/Laser-setup-interface.git" }
kosa-interface = { git = "https://github.com/ololoshka2871/kosa-interface.git" }

[lib]
name = "laser_precision_adjust"

[[bin]]
name = "laser-precision-adjust-cli"