[package]
name = "laser-precision-adjust"
version = "0.9.3"
edition = "2021"
authors = ["ololoshka2871"]
readme = "README.md"
build = "build.rs"


[dependencies]
maplit = "1"
lazy_static = "1"
bytes = { version = "1", default-features = false }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
clap = { version = "4.2", features = ["derive"] }
rand = "0.8"
directories = "5"
async-stream = { version = "0.3" }
chrono = "0.4"
num-traits = "0.2"
anyhow = "1"

tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4"
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }

serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"

rustyline-async = { version = "=0.3.0", default-features = false } # В версии 0.3.1 двоение букв

colored = "2.0"
shellwords = "1.1"

ndarray = "0.13"
csaps = "0.3"

###

laser-setup-interface = { git = "https://github.com/ololoshka2871/Laser-setup-interface.git" }

typescript-converter-macro = { path = "./typescript-converter-macro" }

### server
axum = { version = "0.6", features = ["matched-path", "macros", "tokio", "json"], default-features = false }
axum-server = "0.5"
axum-streams = { version = "0.9", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.4", features = ["fs", "add-extension", "trace"] }
axum-template = { version = "1", features = ["minijinja"] }
minijinja = { version = "1" }
iftree = "1"
mime_guess = "2"

[lib]
name = "laser_precision_adjust"

[[bin]]
name = "laser-precision-adjust-cli"

[[bin]]
name = "laser-precision-adjust-server"
