[package]
name = "laser-precision-adjust"
version = "0.25.3"
edition = "2021"
authors = ["ololoshka2871"]
readme = "README.md"
build = "build.rs"


[dependencies]
maplit = "1"
lazy_static = "1"
bytes = { version = "1", default-features = false }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
clap = { version = "4.2", features = ["derive"] }
rand = "0.8"
directories = "5"
async-stream = { version = "0.3" }
chrono = "0.4"
num-traits = "0.2"
anyhow = "1"

### async
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4"
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }

### serialisation
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"

### math
ndarray = "0.13"
csaps = "0.3"
varpro = "0.6"
nalgebra = "0.32"

###

laser-setup-interface = { git = "https://github.com/ololoshka2871/Laser-setup-interface.git" }

typescript-converter-macro = { path = "./typescript-converter-macro" }

### server
axum = { version = "0.6", features = ["matched-path", "macros", "tokio", "json"], default-features = false }
axum-server = "0.5"
axum-streams = { version = "0.9", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.4", features = ["fs", "add-extension", "trace"] }
axum-template = { version = "1", features = ["minijinja"] }
minijinja = { version = "1" }
iftree = "1"
mime_guess = "2"

### excel report
umya-spreadsheet = "1"

[lib]
name = "laser_precision_adjust"

[[bin]]
name = "laser-precision-adjust-server"

[[bin]]
name = "try_approximate"